<resources>
    <string name="app_name">Student\'s Money</string>

    <string name="incomes">Доходы</string>
    <string name="assets">Активы</string>
    <string name="spends">Расходы</string>

    <string name="title_home">Главная</string>
    <string name="title_statistic">Статистика</string>
    <string name="title_settings">Настройки</string>

    <string name="home_balance">Баланс</string>
    <string name="home_expenses">Расходы</string>
    <string name="home_plan">План</string>

    <string name="add">Добавить</string>
    <string name="change">Изменить</string>
    <string name="delete">Удалить</string>

    <string name="name">Имя</string>
    <string name="type">Тип</string>
    <string name="currency">Валюта</string>
    <string name="plan">План</string>
    <string name="sum">Сумма</string>
    <string name="area">Раздел</string>

    <string name="hint_input_name">Введите имя</string>
    <string name="hint_no_plan">Пустое поле - без плана</string>
    <string name="hint_no_area">Пустое поле - без раздела</string>

    <string name="settings_income_manager">Настройка доходов</string>
    <string name="settings_asset_manager">Настройка счетов</string>
    <string name="settings_spend_manager">Настройка расходов</string>
</resources>