<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/incomeManagerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_income_manager" />

        <Button
            android:id="@+id/assetManagerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_asset_manager" />

        <Button
            android:id="@+id/spendManagerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_spend_manager" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>